log/build_2026-04-05_00-00-09/cubemars_v1/stdout_stderr.log
running egg_info
writing ../../build/cubemars_v1/cubemars_v1.egg-info/PKG-INFO
writing dependency_links to ../../build/cubemars_v1/cubemars_v1.egg-info/dependency_links.txt
writing entry points to ../../build/cubemars_v1/cubemars_v1.egg-info/entry_points.txt
writing requirements to ../../build/cubemars_v1/cubemars_v1.egg-info/requires.txt
writing top-level names to ../../build/cubemars_v1/cubemars_v1.egg-info/top_level.txt
reading manifest file '../../build/cubemars_v1/cubemars_v1.egg-info/SOURCES.txt'
writing manifest file '../../build/cubemars_v1/cubemars_v1.egg-info/SOURCES.txt'
running build
running build_py
copying cubemars_v1/hip_continous_pub.py -> /home/rhitam/exoskeleton-v1/build/cubemars_v1/build/lib/cubemars_v1
running install
running install_lib
copying /home/rhitam/exoskeleton-v1/build/cubemars_v1/build/lib/cubemars_v1/hip_continous_pub.py -> /home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/python3.10/site-packages/cubemars_v1
byte-compiling /home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/python3.10/site-packages/cubemars_v1/hip_continous_pub.py to hip_continous_pub.cpython-310.pyc
running install_data
running install_egg_info
  File "/home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/python3.10/site-packages/cubemars_v1/hip_continous_pub.py", line 62
    msg.data=(float)hip_angle
                    ^^^^^^^^^
SyntaxError: invalid syntax

removing '/home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/python3.10/site-packages/cubemars_v1-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/cubemars_v1/cubemars_v1.egg-info to /home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/python3.10/site-packages/cubemars_v1-0.0.0-py3.10.egg-info
running install_scripts
Installing encoder_pub script to /home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/cubemars_v1
Installing hip_const_pub script to /home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/cubemars_v1
Installing hip_cont_pub script to /home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/cubemars_v1
Installing hip_logger_sub script to /home/rhitam/exoskeleton-v1/install/cubemars_v1/lib/cubemars_v1
writing list of installed files to '/home/rhitam/exoskeleton-v1/build/cubemars_v1/install.log'
